--- a/index.html
+++ b/index.html
@@ -414,16 +414,13 @@ body {
     <div class="buttons">
       <!-- Replace # with actual links -->
       <a class="btn-link" href="https://arxiv.org/abs/2501.09038" target="_blank">
-        <img src="assets/arxiv.jpg" alt="arXiv Logo" class="logo logo-original">Paper
+        <img src="assets/arxiv.png" alt="arXiv Logo" class="logo logo-original">Paper
       </a>
       <a class="btn-link" href="https://drive.google.com/file/d/1ac93646QoMlFtcO_6GlcZXex7lPzRWaE/view?usp=drive_link" target="_blank">
       PDF 📃
       </a>
       <a class="btn-link" href="https://github.com/google-deepmind/physics-IQ-benchmark" target="_blank">
         <img src="assets/github-logo.png" alt="GitHub Logo" class="logo logo-bigger">Code
-      </a>
-      <a class="btn-link" href="#" target="_blank">
-        <img src="assets/data-logo.png" alt="Data Logo" class="logo">Data
       </a>
         <a class="btn-link" href="#podcast-section">
     Podcast 📻
