--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ body {
     <div class="buttons">
       <!-- Replace # with actual links -->
       <a class="btn-link" href="https://arxiv.org/abs/2501.09038" target="_blank">
-        <img src="assets/arxiv.png" alt="arXiv Logo" class="logo logo-original">Paper
+        <img src="assets/arxiv.jpg" alt="arXiv Logo" class="logo logo-original">Paper
       </a>
       <a class="btn-link" href="https://drive.google.com/file/d/1ac93646QoMlFtcO_6GlcZXex7lPzRWaE/view?usp=drive_link" target="_blank">
       PDF 📃
