--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ body {
     <div class="section-wrapper">
       <h2>TL;DR</h2>
       <p>
-        We develop the <strong>Physics-IQ benchmark and score</strong>, which reveals that current generative video models lack physical understanding despite achieving visual realism. 
+        We develop the <strong>Physics-IQ benchmark and score</strong>, which reveals that current generative video models lack physical understanding despite sometimes achieving visual realism. 
         Use our benchmark and dataset to assess your video model's physics understanding! 
       </p>
     </div>
