--- a/index.html
+++ b/index.html
@@ -758,10 +758,11 @@ body {
   <p>If you use our dataset and metrics, please cite our work:</p>
   <div style="background: #f9f9f9; border: 1px solid #ccc; border-radius: 5px; padding: 1rem; position: relative;">
     <pre id="citation-text" style="margin: 0; font-family: monospace; font-size: 0.9rem; white-space: pre-wrap; word-wrap: break-word;">
-@article{motamed2025physics,
-      title={Do generative video models learn physical principles from watching videos?},
-      author={Motamed, Saman and Culp, Laura and Swersky, Kevin and Jaini, Priyank and Geirhos, Robert},
-      year={2025},
+@article{motamed2025generative,
+  title={Do generative video models learn physical principles from watching videos?},
+  author={Motamed, Saman and Culp, Laura and Swersky, Kevin and Jaini, Priyank and Geirhos, Robert},
+  journal={arXiv preprint arXiv:2501.09038},
+  year={2025}
 }
     </pre>
     <button onclick="copyCitation()" style="position: absolute; top: 10px; right: 10px; background: #007BFF; color: #fff; border: none; padding: 0.5rem 1rem; border-radius: 5px; cursor: pointer; font-size: 0.8rem;">
