--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Physics-IQ Benchmark: Do generative video models learn physical principles from watching videos?</title>
+  <meta property="og:image" content="assets/duckie.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Use your custom duck favicon -->
