--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Physics-IQ Benchmark: Do generative video models learn physical principles from watching videos?</title>
-  <meta property="og:image" content="assets/duckie.png" />
+  <meta property="og:image" content="https://physics-iq.github.io/assets/duckie.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
