--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Physics-IQ Benchmark: Do generative video models learn physical principles from watching videos?</title>
-  <meta property="og:image" content="https://physics-iq.github.io/assets/duckie.png" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Physics-IQ Benchmark" />
+  <meta property="og:description" content="Do generative video models learn physical principles from watching videos?" />
+  <meta property="og:image" content="https://physics-iq.github.io/assets/duckie.png" />
+  <meta property="og:url" content="https://physics-iq.github.io/" />
+  <meta property="og:type" content="website" />
+</head>
 
   <!-- Use your custom duck favicon -->
   <link rel="icon" type="image/png" href="assets/duckie.png" />
