--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ body {
       <a class="btn-link" href="https://arxiv.org/abs/2501.09038" target="_blank">
         <img src="assets/arxiv.jpg" alt="arXiv Logo" class="logo logo-original">Paper
       </a>
-      <a class="btn-link" href="https://drive.google.com/file/d/1ac93646QoMlFtcO_6GlcZXex7lPzRWaE/view?usp=drive_link" target="_blank">
+      <a class="btn-link" href="https://arxiv.org/pdf/2501.09038" target="_blank">
       PDF 📃
       </a>
       <a class="btn-link" href="https://github.com/google-deepmind/physics-IQ-benchmark" target="_blank">
