--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Physics-IQ Benchmark: Do generative video models learn physical principles from watching videos?</title>
+  <title>Physics-IQ Benchmark: Do generative video models learn physical principles?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Physics-IQ Benchmark" />
-  <meta property="og:description" content="Do generative video models learn physical principles from watching videos?" />
+  <meta property="og:description" content="Do generative video models learn physical principles?" />
 <meta property="og:image" content="https://physics-iq.github.io/assets/prev.png" />
   <meta property="og:url" content="https://physics-iq.github.io/" />
   <meta property="og:type" content="website" />
@@ -394,7 +394,7 @@ body {
     </div>
 
     <header>
-      <h1>Physics IQ Benchmark:<br>Do generative video models learn physical principles from watching videos?</h1>
+      <h1>Physics IQ Benchmark:<br>Do generative video models learn physical principles?</h1>
       <div class="authors">
           <a href="https://sam-motamed.github.io/" target="_blank">Saman Motamed</a><sup>1,*</sup>, 
           <a href="https://scholar.google.com/citations?user=vEZUEOQAAAAJ&hl=en" target="_blank">Laura Culp</a><sup>2</sup>, 
