--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Physics-IQ Benchmark: Do generative video models learn physical&nbsp;principles?</title>
+  <title>Physics-IQ Benchmark: Do generative video models understand physical&nbsp;principles?</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Physics-IQ Benchmark" />
