--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ body {
     </div>
 
     <header>
-      <h1>Physics IQ Benchmark:<br>Do generative video models learn physical principles?</h1>
+      <h1>Physics IQ Benchmark:<br>Do generative video models understand physical&nbsp;principles?</h1>
       <div class="authors">
           <a href="https://sam-motamed.github.io/" target="_blank">Saman Motamed</a><sup>1,*</sup>, 
           <a href="https://scholar.google.com/citations?user=vEZUEOQAAAAJ&hl=en" target="_blank">Laura Culp</a><sup>2</sup>, 
