--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ body {
   <div style="background: #f9f9f9; border: 1px solid #ccc; border-radius: 5px; padding: 1rem; position: relative;">
     <pre id="citation-text" style="margin: 0; font-family: monospace; font-size: 0.9rem; white-space: pre-wrap; word-wrap: break-word;">
 @article{motamed2025generative,
-  title={Do generative video models learn physical principles from watching videos?},
+  title={Do generative video models understand physical principles?},
   author={Motamed, Saman and Culp, Laura and Swersky, Kevin and Jaini, Priyank and Geirhos, Robert},
   journal={arXiv preprint arXiv:2501.09038},
   year={2025}
