--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ body {
   </p>
   <audio controls>
     <p>Listen to this cool episode on Physics-IQ benchmarking.</p>
-    <source src="assets/pod.mp3" type="audio/mpeg">
+    <source src="assets/updated_podcast.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </div>
